--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -2,25 +2,37 @@ FROM jupyter/base-notebook:python-3.10
 
 USER root
 
+# Install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    chromium \
     wget \
     unzip \
-    libglib2.0-0 \
-    libnss3 \
-    libgconf-2-4 \
-    libfontconfig1 \
-    libxss1 \
-    libappindicator1 \
-    libasound2 \
+    ca-certificates \
     fonts-liberation \
+    libappindicator3-1 \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libcups2 \
+    libdbus-1-3 \
+    libgdk-pixbuf2.0-0 \
+    libnspr4 \
+    libnss3 \
+    libx11-xcb1 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxrandr2 \
     xdg-utils \
     && rm -rf /var/lib/apt/lists/*
 
-# Install specific chromedriver version manually
-ENV CHROME_DRIVER_VERSION=116.0.5845.96
+# Install Chromium (manualmente)
+RUN wget -q https://storage.googleapis.com/chromium-browser-snapshots/Linux_x64/1180845/chrome-linux.zip && \
+    unzip chrome-linux.zip && \
+    mv chrome-linux /opt/chromium && \
+    ln -s /opt/chromium/chrome /usr/bin/chromium && \
+    rm chrome-linux.zip
 
-RUN wget -q https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip && \
+# Install matching Chromedriver manually (114.0.5735.90)
+RUN wget -q https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip && \
     unzip chromedriver_linux64.zip && \
     mv chromedriver /usr/local/bin/chromedriver && \
     chmod +x /usr/local/bin/chromedriver && \
